[workspace]
resolver = "2"

members = ["cli", "core"]

[workspace.package]
version = "0.6.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate's programmatic testing framework."
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/paritytech/try-runtime-cli"
repository = "https://github.com/paritytech/try-runtime-cli/"

[workspace.dependencies]
assert_cmd = { version = "2.0.10" }
async-trait = { version = "0.1.57" }
bytesize = { version = "1.2.0" }
clap = { version = "4.0.9" }
env_logger = { version = "0.10.0" }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.11.0" }
log = { version = "0.4.17" }
parity-scale-codec = { version = "3.6.1" }
regex = { version = "1.7.3" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.85" }
strum = "0.25"
strum_macros = "0.25"
tempfile = { version = "3.1.0" }
tokio = { version = "1.27.0" }
zstd = { version = "0.11.2", default-features = false }

avail-base = { git = "https://github.com/availproject/avail", tag = "v2.2.4.2" }
avail-core = { git = "https://github.com/availproject/avail-core", tag = "node-v2230-rc2", features = ["runtime", "try-runtime"] }
avail-system = { package = "frame-system", git = "https://github.com/availproject/avail", tag = "v2.2.4.2" }

# Polkadot SDK
frame-remote-externalities = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
frame-try-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
frame-support = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

sc-cli = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sc-executor = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sc-service = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

sp-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-consensus-aura = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-consensus-babe = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-externalities = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-inherents = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-keystore = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-state-machine = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-storage = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-timestamp = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-transaction-storage-proof = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-version = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sp-weights = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

substrate-cli-test-utils = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
substrate-rpc-client = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

# node-executor = { package = "staging-node-executor", git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
node-primitives = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

# Local
try-runtime-core = { path = "core" }
