[workspace]
resolver = "2"

members = ["cli", "core"]

[workspace.package]
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate's programmatic testing framework."
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/paritytech/try-runtime-cli"
repository = "https://github.com/paritytech/try-runtime-cli/"

[workspace.dependencies]
array-bytes = { version = "6.2.3" }
assert_cmd = { version = "2.0.16" }
async-trait = { version = "0.1.83" }
bytesize = { version = "1.3.0" }
clap = { version = "4.5.18" }
env_logger = { version = "0.11.5" }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.13.0" }
log = { version = "0.4.22" }
parity-scale-codec = { version = "3.6.12" }
regex = { version = "1.11.0" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
strum = "0.26"
strum_macros = "0.26"
tempfile = { version = "3.13.0" }
tokio = { version = "1.40.0" }
zstd = { version = "0.13.2", default-features = false }

avail-base = { git = "https://github.com/availproject/avail", branch = "toufeeq/polkadot-v1.16.2", features = ["try-runtime"] }
frame-system = { package = "frame-system", git = "https://github.com/availproject/avail", branch = "toufeeq/polkadot-v1.16.2", features = ["try-runtime"] }
# Polkadot SDK
frame-remote-externalities = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
frame-try-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
frame-support = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }

sc-cli = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sc-executor = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sc-service = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }

sp-api = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-consensus-aura = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-consensus-babe = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-externalities = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-inherents = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-keystore = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-state-machine = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-storage = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-timestamp = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-transaction-storage-proof = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-version = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
sp-weights = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }

substrate-cli-test-utils = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
substrate-rpc-client = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }

polkadot-primitives = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
cumulus-primitives-core = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }
cumulus-client-parachain-inherent = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "toufeeq/upgrade-v1.16.2" }

# Local
try-runtime-core = { path = "core" }

[patch.'https://github.com/availproject/polkadot-sdk.git']
frame-system = { package = "frame-system", git = "https://github.com/availproject/avail", branch = "toufeeq/polkadot-v1.16.2" }
